--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "less-helpers",
+  "name": "less-css-helpers",
   "description": "register helper functions that can be used with LESS, the same way that handlebars helpers are used in templates.",
   "version": "0.1.0",
-  "homepage": "https://github.com/jonschlinkert/less-helpers",
+  "homepage": "https://github.com/jonschlinkert/less-css-helpers",
   "author": {
     "name": "Jon Schlinkert",
     "url": "https://github.com/jonschlinkert"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jonschlinkert/less-helpers.git"
+    "url": "https://github.com/jonschlinkert/less-css-helpers.git"
   },
   "bugs": {
-    "url": "https://github.com/jonschlinkert/less-helpers/issues"
+    "url": "https://github.com/jonschlinkert/less-css-helpers/issues"
   },
   "license": {
     "type": "MIT",
-    "url": "https://github.com/jonschlinkert/less-helpers/blob/master/LICENSE"
+    "url": "https://github.com/jonschlinkert/less-css-helpers/blob/master/LICENSE"
   },
   "files": [
     "index.js"
